opsiconfd (4.0.6.4-1) UNRELEASED; urgency=low

  * opsiconfd.conf: Default log-level is 5.
  * fix in webstart implementation for configed
  * Failed RPDs now get logged as a warning.
  * Various small refactorings.
  * Supply a unit-file for systemd.
  * debian/format: removed file.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 19 May 2015 15:36:26 +0200

opsiconfd (4.0.6.3-1) experimental; urgency=low

  * Logrotate config: client logs in opsiclientd require size >= 5MB
  * opsiconfd.conf: Added entry for "max sessions per ip"

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 09 Mar 2015 11:05:01 +0100

opsiconfd (4.0.6.2-1) experimental; urgency=low

  * Fix HTML table code.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Fri, 30 Jan 2015 10:14:10 +0100

opsiconfd (4.0.6.1-1) experimental; urgency=low

  * Info page: Show info about 15 most executed RPCs
  * Setting +x on /etc/init.d/opsiconfd for openSuse 13.2
  * Make it possible to set a limit for the size of logfiles.
  * Extending logrotate config to match more logtypes.
  * Added logrotate configuration for /var/log/opsi/package.log
  * Info page: show total number of calls.
  * RPC call statistics are stored in a deque for faster operation

 -- Niko Wenselowski <n.wenselowski@uib.de>  Fri, 30 Jan 2015 09:24:16 +0100

opsiconfd (4.0.5.3-1) testing; urgency=low

  * Reset maxAuthenticationFailure before connection will blocked

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Mon, 16 Mar 2015 14:17:58 +0100

opsiconfd (4.0.5.2-1) stable; urgency=low

  * Info page: display the correct percentage if calls failed
  * Statistics: display correct result-length if returned type is dict
  * Info page: Show more info about threads if possible
  * RHEL / CentOS 7 and Fedora: Fix logrotate configuration

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 20 Oct 2014 09:38:46 +0200

opsiconfd (4.0.5.1-7) experimental; urgency=low

  * Fix for newer logrotate-versions not applied on SLES because 11SP3