@@ -6,6 +6,7 @@ opsiconfd (4.0.6.4-1) UNRELEASED; urgency=low
   * Various small refactorings.
   * Supply a unit-file for systemd.
   * debian/format: removed file.
+  * Various small refactorings in opsiconfd.workers
 
  -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 19 May 2015 15:36:26 +0200
 
